--- a/general.css
+++ b/general.css
@@ -4,24 +4,29 @@ body, button, option {
 	font-family: 'Gotham', sans-serif;
 	font-size: 16px;
 }
-.medium {
-	font-size: 20px;
+a {
+	text-decoration: none;
+	color: black;
 }
 .title {
-	font-size: 24px;
+	font-size: 20px;
 }
 /* FORMS */
 input, select {
-	border: 3px solid black;
-	background: white;
-	height: 40px;
+	width: 100%;
+	border: 2px solid #111111;
+	background: #dddddd;
+	height: 50px;
 	box-sizing: border-box;
+	font-family: 'Gotham', sans-serif;
+	font-size: 20px;
 }
 /* STRUCTURE */
 body, html {
 	margin: 0;
 	height: 100%;
 	width: 100%;
+	background-color: #dddddd;
 	position: absolute;
 }
 	header {
@@ -32,10 +37,10 @@ body, html {
 			align-items: flex-end;
 			top: 40px;
 		}
-		.ui-top:nth-of-type(1) {
+		.ui-top:nth-of-type(odd) {
 			left: 50px;
 		}
-		.ui-top:nth-last-of-type(1) {
+		.ui-top:nth-of-type(even) {
 			right: 50px;
 		}
 			.ui-top button {
@@ -45,38 +50,111 @@ body, html {
 		align-items: flex-start;
 		bottom: 40px;
 	}
-	.ui-bottom:nth-of-type(1) {
+	.ui-bottom:nth-of-type(odd) {
 		left: 50px;
+	}
+	.ui-bottom:nth-of-type(even) {
+		right: 50px;
 	}
 	main .ui-bottom {
 		right: 50px;
 	}
-	nav {
-		display: none;
-	}
 .ui {
 	display: flex;
 	position: fixed;
-	z-index: 100;
+	z-index: 90;
 }
-.ui span {
-	padding-left: 10px;
-	padding-right: 10px; 
-}
-.ui div {
-	display: flex;
-	align-items: center;
-	border: none;
-	width: 100%;
-}
-.ui div button {
-	display: flex;
-	align-items: center;
+	.ui span {
+		padding: 0 10px;
+	}
+	.ui div {
+		display: flex;
+		align-items: center;
+		border: none;
+		width: 100%;
+	}
+	.ui div button {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		padding: 0;
+	}
+button {
 	background-color: transparent;
 	border: none;
-	width: 100%;
-	padding: 0;
+	cursor: pointer;
 }
 button svg {
 	height: 25px;
 }
+.extend-button {
+	border-top: solid black 2px;
+	text-align: center;
+	padding-top: 40px;
+}
+footer {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 40px;
+	margin-top: 50px;
+}
+/* NAV */
+nav {
+	height: 0%;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	color: white;
+	background-color: #111111;
+	overflow-y: hidden;
+	transition: 0.5s;
+	z-index: 100;
+}
+	nav button, nav a {
+		color: white;
+	}
+	nav button {
+		display: flex;
+		align-items: center;
+	}
+		nav button span {
+			padding: 0 10px;
+		}
+	nav div {
+		position: relative;
+		text-align: center;
+	}
+	.nav-head {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin: 40px 50px;
+		color: white;
+	}
+		.social {
+			position: absolute;
+			width: 100%;
+		}
+	.nav-content {
+		width: 100%;
+		height: 100%;
+		position: relative;
+		z-index: 99;
+	}
+		.nav-content ul {
+			list-style-type: none;
+		}
+			.nav-content a {
+				padding: 10px;
+				font-size: 50px;
+			}
+	.nav-foot {
+		width: calc(100% - 100px);
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin: 40px 50px;
+		bottom: 0;
+		position: absolute;
+	}
