--- a/index.css
+++ b/index.css
@@ -1,37 +1,39 @@
-/*TYPOGRAPHY*/
-
-/*STRUCTURE*/
 main {
 	width: 100%;
 	height: 100%;
-	display: block;
 }
-	section {
+	.movie-container {
+		height: 80%;
 		width: 100%;
-		height: 100%;
-		display: block;
-		background-color: green;
+		padding-top: 10vh;
 	}
-		.carousel-container {
-			display: block;
-			height: 70%;
-			padding-top: 15vh;
-			padding-bottom: 15vh;
+		.movie-bg {
+			height: 100%;
+			width: 70%;
+			margin: auto;
+			background-color: gray;
+			position: relative;
 		}
-			.carousel-bg {
-				width: 100%;
-				height: 100%;
-				background-color: gray;
-			}
-			.carousel {
+			.carousel-container {
+				width: 60%;
+				height: 60%;
 				margin: auto;
-				padding: 0;
-				vertical-align: middle;
+				background-color: blue;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
 			}
-			.carousel div {
-				width: 20%;
-				display: inline-block;
+			.carousel-container span {
+				margin-top: 10px;
 			}
+				.carousel {
+					display: flex;
+					height: 100%;
+					width: 500%;
+					vertical-align: middle;
+					overflow: hidden;
+				}
 		.carousel-control {
 			
 		}
